--- a/src/components/coolCoinLogo/coolCoinLogo.css
+++ b/src/components/coolCoinLogo/coolCoinLogo.css
@@ -1,16 +1,13 @@
-html,
-body,
 .c {
-  position: absolute;
-  max-width: 500px;
-  max-height: 500px;
+  position: fixed;
+  max-width: 150px;
+  max-height: 150px;
   width: 50ch;
   height: 50ch;
   cursor: pointer;
   will-change: transform, opacity;
   border-radius: 50%;
-
-  border: 3px solid black;
+  border: 1px solid black;
 }
 
 .front,
