--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,22 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,700,900');
-
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,700,900");
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   margin: 0;
-  font-family: 'Poppins';
+  box-sizing: border-box;
+  font-family: "Poppins";
 }
-
+.button-menu {
+  position: absolute;
+  font-weight: bold;
+  font-size: 35px;
+  top: 10px;
+  right: 10px;
+  padding: 20px;
+  cursor: pointer;
+  z-index: 100;
+  background-color: transparent;
+  border: 1px;
+}
