--- a/src/components/jumbotron/jumbotron.css
+++ b/src/components/jumbotron/jumbotron.css
@@ -3,19 +3,30 @@
   text-align: center;
   width: 100%;
   height: 500px;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  background-image: url(../../assets/wavey-fingerprint.svg);
   z-index: 97;
 }
+
 .logo-container {
+  position: center;
   margin: auto;
-  width: 150px;
-  height: 150px;
+  width: 250px;
+  height: 250px;
+  will-change: transform;
 }
 .jumbobox .jumbobox-image {
   position: relative;
   border-radius: 15px;
-  margin-top: 100px;
+  margin: auto;
   width: 70%;
-  height: 50%;
-  background-color: green;
+  height: 100%;
+  background-image: url(../../assets/glacier.jpg);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   z-index: 98;
+}
+
+.button-menu {
+  color: white;
 }
