--- a/src/components/jumbotron/jumbotron.css
+++ b/src/components/jumbotron/jumbotron.css
@@ -15,6 +15,14 @@
   width: 250px;
   height: 250px;
   will-change: transform;
+  padding-bottom: 60px;
+  padding-top: 0px;
+}
+.jumbotron-h1 {
+  padding-top:20px;
+}
+.jumbotron-h2 {
+  text-shadow: white 0px 0px 10px;
 }
 .jumbobox .jumbobox-image {
   position: relative;
