--- a/src/index.css
+++ b/src/index.css
@@ -14,13 +14,11 @@ h2 {
 }
 .button-menu {
   position: absolute;
-  font-weight: bold;
-  font-size: 35px;
-  top: 10px;
-  right: 10px;
-  padding: 20px;
+  top: 30px;
+  right: 30px;
   cursor: pointer;
   z-index: 100;
   background-color: transparent;
-  border: 1px;
+  border: none;
+  outline: none;
 }
