--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ h2 {
   color: black;
 }
 .button-menu {
-  position: absolute;
+  position: fixed;
   top: 30px;
   right: 30px;
   cursor: pointer;
@@ -21,4 +21,5 @@ h2 {
   background-color: transparent;
   border: none;
   outline: none;
+  color: white;
 }
