--- a/src/components/aboutMe/biography.css
+++ b/src/components/aboutMe/biography.css
@@ -1,11 +1,10 @@
 .bio {
-  background-color: pink;
+  background-color: white;
   text-align: center;
   width: 100%;
   height: 500px;
   padding-top: 5%;
   padding-bottom: 5%;
-  background-image: url(../../assets/prism-background.svg);
   z-index: 96;
 }
 .cool-title {
