--- a/src/components/jumbotron/jumbotron.css
+++ b/src/components/jumbotron/jumbotron.css
@@ -4,7 +4,6 @@
   width: 100%;
   height: 500px;
   padding-top: 5%;
-  padding-bottom: 5%;
   background-image: url(../../assets/diamonds-background..svg);
   position: relative;
   box-shadow: 5px 5px 10em #333;
@@ -22,6 +21,7 @@
 }
 .jumbotron-h1 {
   padding-top: 20px;
+  color: whitesmoke;
 }
 
 .social-icon {
@@ -30,6 +30,7 @@
 }
 
 .bio-p {
+  color: whitesmoke;
   text-shadow: white 0px 0px 8px;
   font-size: 25px;
 }
